fix(input-component): align only legend of input variants

--- a/apps/input-component/src/components/InputVariant.scss
+++ b/apps/input-component/src/components/InputVariant.scss
@@ -5,5 +5,6 @@
 
   &__legend {
     font-family: "Ubuntu Mono", monospace;
+    text-align: center;
   }
 }
